<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_counters"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/no_counters" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_normal_3"
            android:layout_marginTop="@dimen/margin_normal_1"
            android:layout_marginEnd="@dimen/margin_normal_3"
            android:textColor="@color/gray"
            android:text="@string/no_counters"
            tools:text="@string/no_counters_phrase"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal_1"
            android:text="@string/retry"
            android:textAllCaps="true"
            android:visibility="gone"
            tools:visibility="visible"
            style="@style/Theme.OrangeMediumTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
