<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.CountersFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_search_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal_1"
        android:layout_marginVertical="@dimen/margin_small"
        app:cardCornerRadius="@dimen/search_view_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:queryBackground="@color/transparent"
            android:queryHint="@string/search_counters"
            tools:visibility="visible"
            android:searchHintIcon="@drawable/ic_search"
            android:searchIcon="@drawable/ic_search" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSelected"
            android:layout_width="match_parent"
            android:visibility="gone"
            tools:visibility="gone"
            android:padding="@dimen/margin_normal_1"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline14"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSelectedItems"
                style="@style/Theme.GrayLargeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal_3"
                android:text="@string/n_selected"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivCancel"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <ImageView
                android:id="@+id/ivDeleteCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                android:layout_marginEnd="@dimen/margin_normal_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddCounter"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loader"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:minWidth="40dp"
            android:minHeight="40dp"
            app:indicatorColor="@color/orange" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_normal_1"
            android:layout_marginBottom="@dimen/margin_normal_1"
            app:layout_constraintBottom_toTopOf="@+id/btnAddCounter"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            tools:listitem="@layout/item_counter" />

    </FrameLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96107054" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <TextView
        android:id="@+id/tvItems"
        style="@style/Theme.NormalBoldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_items"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline13" />

    <TextView
        android:id="@+id/tvTimes"
        style="@style/Theme.GrayMediumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal_1"
        android:text="@string/n_times"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/tvItems" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal_3"
        android:padding="@dimen/margin_normal_1"
        android:text="@string/add_counters"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/margin_normal_3"
        app:icon="@drawable/ic_plus"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.13381995" />

</androidx.constraintlayout.widget.ConstraintLayout>